<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<TableLayout 
	    android:id="@+id/tableLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="5dip">
    
<!--     
    <EditText android:id="@+id/edit_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/edit_message" />
-->
 	  	<Button 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/store_Current_Information"
        	android:onClick="store"/>
 
  	    
    	<Button
	        android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/retrieve"
    		android:onClick="retrieve" />
	    
    	<Button
	  	    android:layout_width="wrap_content"
  	    	android:layout_height="wrap_content"
  	    	android:text="@string/graph_button"
  	    	android:onClick="graphData" /> 
  	    </TableRow>
  	    <TableRow
  	        android:id="@+id/tableRow4"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:padding="5dip">

    		<Button
	        	android:layout_width="wrap_content"
  	    		android:layout_height="wrap_content"
  	    		android:text="@string/artist_chart"
  	    		android:onClick="graphArtist"/>

    		<Button
		        android:layout_width="wrap_content"
  	    		android:layout_height="wrap_content"
  	    		android:text="@string/song_chart"
  	    		android:onClick="graphSong"/>
  	
    		<Button
		        android:layout_width="wrap_content"
  	    		android:layout_height="wrap_content"
  	    		android:text="@string/genre_chart"
  	    		android:onClick="graphGenre"/>
    		
    	</TableRow>
    </TableLayout>
  	
    
</LinearLayout>
